--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuración de la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/prueba_videojuegos
 spring.datasource.username=chinto
-spring.datasource.password=Chintete?107
+spring.datasource.password=Chintete_107
 
 # Configuración de Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
